plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.rodolfocf'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(24)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

	compileOnly 'org.projectlombok:lombok:1.18.38'
	annotationProcessor 'org.projectlombok:lombok:1.18.38'

    runtimeOnly 'com.h2database:h2:2.2.224'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
    implementation 'org.springdoc:springdoc-openapi-starter-common:2.8.8'


    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.mockito:mockito-core:5.12.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
	testImplementation 'net.bytebuddy:byte-buddy:1.14.13'
	testImplementation 'net.bytebuddy:byte-buddy-agent:1.14.13'
	testImplementation 'org.assertj:assertj-core:3.25.3'


}

test {
	useJUnitPlatform()

	jvmArgs = [
			"--add-opens=java.base/java.lang=ALL-UNNAMED",
			"--add-opens=java.base/java.util=ALL-UNNAMED",
			"-XX:+EnableDynamicAgentLoading",
			"-Dnet.bytebuddy.experimental=true"
	]
}
